# NeuroCore

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  IDEAS.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: main_neurocore.yml
core/: ai_flows.json  debug.py  dependencies.py  errors.py  flow_context.py  flow_data.py  flow_manager.py  flow_runner.py  llm.py  module_manager.py  observability.py  planner_helpers.py  research_manager.py  routers.py  session_manager.py  settings.json  settings.py  statistics_engine.py  structured_output.py
core/schemas/: __init__.py  article.py  finding.py  hypothesis.py  study_design.py
docs/: CONCURRENCY.md  IDEAS.md  MODULE_GUIDE.md  PROJECT_ANALYSIS.md  SYSTEM_ARCHITECTURE.md  TOOL_GUIDE.md
modules/: MODULE_GUIDE.md  TOOL_GUIDE.md
modules/agent_loop/: module.json  node.py
modules/annotations/: __init__.py  module.json  node.py
modules/browser_automation/: module.json  router.py  service.py
modules/calendar/: events.py  module.json  node.py  router.py
modules/chat/: module.json  node.py  router.py  sessions.py
modules/discord/: bridge.py  module.json  node.py  router.py  service.py
modules/email_bridge/: imap_bridge.py  module.json  node.py  router.py  service.py  smtp_bridge.py
modules/knowledge_base/: backend.py  module.json  node.py  processor.py  router.py
modules/llm_module/: module.json  node.py  router.py
modules/logic/: __init__.py  module.json  node.py
modules/memory/: __init__.py  arbiter.py  backend.py  consolidation.py  module.json  node.py  router.py
modules/memory_browser/: module.json  router.py
modules/messaging_bridge/: discord_bridge.py  module.json  node.py  router.py  service.py  signal_bridge.py  telegram_bridge.py  whatsapp_bridge.py
modules/planner/: module.json  node.py
modules/reasoning/: __init__.py  module.json  node.py
modules/reasoning_book/: module.json  node.py  router.py  (+1 more)
tests/: conftest.py  run_tests.py  test_agent_loop.py  test_agent_loop_replan.py  test_annotations_node.py  test_browser_automation.py  test_calendar.py  test_calendar_events.py  test_calendar_node.py  test_chat_features.py  test_chat_module.py  test_chat_nodes.py  test_chat_router_flow.py  test_chat_sessions.py  test_core_concurrency.py  test_core_debug.py  test_core_flow_manager.py  test_core_improvements.py  test_core_llm.py  test_core_llm_bridge.py  test_core_robustness.py  test_core_routers.py  test_core_settings.py  test_debug.py  test_dependencies.py  test_discord_module.py  test_e2e.py  test_email_bridge.py  test_episode_persistence.py  test_fixes_verification.py  test_flow_context.py  test_flow_data.py  test_flow_integration.py  test_flow_manager.py  test_flow_runner.py  test_flow_validation.py  test_flows.json  test_goal_pursuit.py  test_goals.py  test_knowledge_base.py  (+39 more)
(+84 files in other folders)
