[project]
name = "neurocore"
version = "0.1.0"
description = "A powerful, modular AI agent framework with visual flow editor, persistent memory, and autonomous agent capabilities."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Aegean-E", email = "In the Future"}
]
keywords = ["ai", "agent", "llm", "autonomous", "memory", "rag", "faiss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.8.0",
    "pydantic>=2.10.0",
    "filelock>=3.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest<9",
    "pytest-cov",
    "pytest-httpx",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end tests that require a running NeuroCore server",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
